force-app/main/default/objects/Training_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Confirming Instructor</fullName>
            </value>
            <value>
                <fullName>Instructor Confirmed</fullName>
            </value>
            <value>
                <fullName>Confirming Training Mgr</fullName>
            </value>
            <value>
                <fullName>Confirming 2nd Training Mgr</fullName>
            </value>
            <value>
                <fullName>Confirming Co-Teach Instructor</fullName>
            </value>
            <value>
                <fullName>Co-Teach Confirmed</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Confirming Resource Type 1</fullName>
            </value>
            <value>
                <fullName>Confirming Resource Type 2</fullName>
            </value>
            <value>
                <fullName>Confirming Resource Type 3</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Converted to VILT</fullName>
            </value>
            <value>
                <fullName>Confirming Back-up Instructor</fullName>
            </value>
            <value>
                <fullName>Back-up Instructor Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>