force-app/main/default/objects/Training_Event__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Program Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>TTT - Level 1</fullName>
            </value>
            <value>
                <fullName>TTT - Level 2</fullName>
            </value>
            <value>
                <fullName>ECM Boot Camp</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Custom-Training</fullName>
            </value>
            <value>
                <fullName>Custom-Advisory Services</fullName>
            </value>
            <value>
                <fullName>Delivering Project Results Workshop</fullName>
            </value>
            <value>
                <fullName>Speaking Engagement</fullName>
            </value>
            <value>
                <fullName>Practitioner</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Integrating Agile</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Methodology Application Program</fullName>
            </value>
            <value>
                <fullName>Leading Your Team Through Change</fullName>
            </value>
            <value>
                <fullName>Taking Charge of Change</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Improve Project Health</fullName>
            </value>
            <value>
                <fullName>ADKAR Model Mastery Level 1: Prevent Change Resistance</fullName>
            </value>
            <value>
                <fullName>ADKAR Model Mastery Level 2: Resolve Change Barriers</fullName>
            </value>
            <value>
                <fullName>Achieve Change Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>