force-app/main/default/objects/Training_Event__c/fields/Training_Company__c.field-meta.xml
<CustomField>
    <fullName>Training_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the company that is delivering the training event.</inlineHelpText>
    <label>Training Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Events (Global Affiliate Network)</relationshipLabel>
    <relationshipName>Training_Events</relationshipName>
    <type>Lookup</type>
</CustomField>