force-app/main/default/objects/Training_Event__c/fields/Training_Event_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_Owner_Division__c</fullName>
    <formula>Owner:User.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Event Owner: Division</label>
    <type>Text</type>
</CustomField>