force-app/main/default/objects/Training_Event__c/fields/Training_Event_Products__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_Products__c</fullName>
    <label>Training Event Products</label>
    <summaryForeignKey>Training_Event_Product__c.Training_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>