force-app/main/default/objects/Training_Event__c/fields/Training_Event_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_Start_Time__c</fullName>
    <label>Training Event Start Time</label>
    <type>Time</type>
</CustomField>