force-app/main/default/objects/Training_Event__c/fields/Training_Event_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Training_Event_Time_Zone__c</fullName>
    <description>Time zone of the training event</description>
    <label>Training Event Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Australian Central Daylight Time</fullName>
            </value>
            <value>
                <fullName>Australian Central Standard Time</fullName>
            </value>
            <value>
                <fullName>Australian Eastern Daylight Time</fullName>
            </value>
            <value>
                <fullName>Australian Eastern Standard Time</fullName>
            </value>
            <value>
                <fullName>Australian Western Standard Time</fullName>
            </value>
            <value>
                <fullName>Avaneè de l&apos;est</fullName>
            </value>
            <value>
                <fullName>Christmas Island Time</fullName>
            </value>
            <value>
                <fullName>New Zealand Daylight Time</fullName>
            </value>
            <value>
                <fullName>New Zealand Standard Time</fullName>
            </value>
            <value>
                <fullName>Norfolk Island Standard Time</fullName>
            </value>
            <value>
                <fullName>Normale de l&apos;Est</fullName>
            </value>
            <value>
                <fullName>North America Atlantic Daylight Time</fullName>
            </value>
            <value>
                <fullName>North America Atlantic Standard Time</fullName>
            </value>
            <value>
                <fullName>North America Central Daylight Time</fullName>
            </value>
            <value>
                <fullName>North America Central Standard Time</fullName>
            </value>
            <value>
                <fullName>North America Eastern Daylight Time</fullName>
            </value>
            <value>
                <fullName>North America Eastern Standard Time</fullName>
            </value>
            <value>
                <fullName>North America Mountain Daylight Time</fullName>
            </value>
            <value>
                <fullName>North America Mountain Standard Time</fullName>
            </value>
            <value>
                <fullName>North America Newfoundland Daylight Time</fullName>
            </value>
            <value>
                <fullName>North America Newfoundland Standard Time</fullName>
            </value>
            <value>
                <fullName>North America Pacific Daylight Time</fullName>
            </value>
            <value>
                <fullName>North America Pacific Standard Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>