force-app/main/default/objects/Training_Event__c/fields/Training_Manager__c.field-meta.xml
<CustomField>
    <fullName>Training_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Training Manager)</relationshipLabel>
    <relationshipName>Training_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>