force-app/main/default/objects/Training_Event__c/fields/Trigger_CP_Flow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_CP_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger CP Flow</label>
    <type>Checkbox</type>
</CustomField>