force-app/main/default/objects/Training_Event__c/fields/TSS_Email__c.field-meta.xml
<CustomField>
    <fullName>TSS_Email__c</fullName>
    <formula>Training_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Success Specialist Email</label>
    <type>Text</type>
</CustomField>