force-app/main/default/objects/Training_Event__c/fields/Tuesday_Team_Building_Activity_19__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Team_Building_Activity_19__c</fullName>
    <label>Tuesday Team Building Activity</label>
    <type>TextArea</type>
</CustomField>