force-app/main/default/objects/Training_Event__c/fields/Tuesday_Team_Building_Activity__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Team_Building_Activity__c</fullName>
    <formula>End_User_Company__r.Tuesday_Team_Building_Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuesday Team Building Activity OBS</label>
    <type>Text</type>
</CustomField>