force-app/main/default/objects/Training_Event__c/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <inlineHelpText>ONSITE means Enterprise Event. We are currently in process of upgrading the picklist values.</inlineHelpText>
    <label>Type of Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Public Partnership</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>