force-app/main/default/objects/Training_Event__c/fields/Venue_Address__c.field-meta.xml
<CustomField>
    <fullName>Venue_Address__c</fullName>
    <label>Venue Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>