force-app/main/default/objects/Training_Event__c/fields/Venue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Venue_Notes__c</fullName>
    <label>Venue Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>