force-app/main/default/objects/Training_Event__c/fields/VILT_Program__c.field-meta.xml
<CustomField>
    <fullName>VILT_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, it was was a Virtual Instructor -Led Training.</description>
    <inlineHelpText>If this box is checked, it was was a Virtual Instructor -Led Training.</inlineHelpText>
    <label>VILT Program</label>
    <type>Checkbox</type>
</CustomField>