force-app/main/default/objects/Training_Event__c/fields/Virtual_Meeting_Details__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Meeting_Details__c</fullName>
    <label>Virtual Meeting Details</label>
    <type>TextArea</type>
</CustomField>