force-app/main/default/objects/Training_Event__c/fields/X10_Days_within_Start__c.field-meta.xml
<CustomField>
    <fullName>X10_Days_within_Start__c</fullName>
    <description>Notes whether a training event start date is within 10 business days</description>
    <formula>TODAY()&gt;= Start_Date__c - 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 Days within Start</label>
    <type>Checkbox</type>
</CustomField>