force-app/main/default/objects/Training_Event__c/fields/X18_Digit_ID_Training_Event__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_ID_Training_Event__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit ID Training Event</label>
    <type>Text</type>
</CustomField>