force-app/main/default/objects/Training_Event__c/fields/X2nd_Coach__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Coach</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (2nd Coach)</relationshipLabel>
    <relationshipName>Training_Eventsqvhp</relationshipName>
    <type>Lookup</type>
</CustomField>