force-app/main/default/objects/Training_Event__c/fields/X2nd_Training_Manager__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Training_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Training Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>