force-app/main/default/objects/Training_Event__c/fields/YTD_Month__c.field-meta.xml
<CustomField>
    <fullName>YTD_Month__c</fullName>
    <formula>Month( End_Date__c )&gt;=Month(today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Month</label>
    <type>Checkbox</type>
</CustomField>