force-app/main/default/objects/Training_Event__c/recordTypes/Consulting_Event.recordType-meta.xml
<RecordType>
    <fullName>Consulting_Event</fullName>
    <active>true</active>
    <label>Consulting Event</label>
</RecordType>