force-app/main/default/objects/Training_Event__c/recordTypes/GAN_Training_Event.recordType-meta.xml
<RecordType>
    <fullName>GAN_Training_Event</fullName>
    <active>true</active>
    <label>GAN Training Event</label>
</RecordType>