force-app/main/default/objects/Training_Event__c/recordTypes/Partner_Training_Event.recordType-meta.xml
<RecordType>
    <fullName>Partner_Training_Event</fullName>
    <active>true</active>
    <label>Partner Training Event</label>
</RecordType>