force-app/main/default/objects/Training_Event__c/recordTypes/Prosci_Training_Event.recordType-meta.xml
<RecordType>
    <fullName>Prosci_Training_Event</fullName>
    <active>true</active>
    <label>Prosci Training Event</label>
</RecordType>