force-app/main/default/objects/Training_Event__c/listViews/All_US_Public_Program.listView-meta.xml
<ListView>
    <fullName>All_US_Public_Program</fullName>
    <columns>Start_Date__c</columns>
    <columns>Online_status__c</columns>
    <columns>Title__c</columns>
    <columns>NAME</columns>
    <columns>Projected_Attendance__c</columns>
    <columns>Session_Notes__c</columns>
    <columns>No_of_Trainees__c</columns>
    <columns>No_of_Pending__c</columns>
    <columns>Assigned_Instructor__c</columns>
    <columns>Assigned_Training_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Training_Event__c.Prosci_Training_Event</value>
    </filters>
    <filters>
        <field>Instructor_Type__c</field>
        <operation>equals</operation>
        <value>Prosci</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>Type_of_Event__c</field>
        <operation>notEqual</operation>
        <value>On Call</value>
    </filters>
    <filters>
        <field>Type_of_Event__c</field>
        <operation>notEqual</operation>
        <value>Onsite</value>
    </filters>
    <filters>
        <field>Type_of_Event__c</field>
        <operation>notEqual</operation>
        <value>Internal</value>
    </filters>
    <filters>
        <field>Type_of_Event__c</field>
        <operation>notEqual</operation>
        <value>Conference</value>
    </filters>
    <label>All US Public Program</label>
</ListView>