force-app/main/default/objects/Training_Event__c/listViews/ANZ_All_Training_Events_2024.listView-meta.xml
<ListView>
    <fullName>ANZ_All_Training_Events_2024</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>No_of_Trainees__c</columns>
    <columns>No_of_Pending__c</columns>
    <columns>No_of_Waitlisted__c</columns>
    <columns>No_of_Cancelled_Trainees__c</columns>
    <columns>Order_Reference_Number__c</columns>
    <columns>Assigned_Training_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Instructor_Type__c</field>
        <operation>equals</operation>
        <value>Prosci Australia</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2024</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Not available,Cancelled</value>
    </filters>
    <label>ANZ All Training Events 2024</label>
</ListView>