force-app/main/default/objects/Training_Event__c/listViews/ANZ_Allocations_2023.listView-meta.xml
<ListView>
    <fullName>ANZ_Allocations_2023</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Instructor__c</columns>
    <columns>Instructor_2__c</columns>
    <columns>X2nd_Coach__c</columns>
    <columns>Assigned_Training_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Instructor_Type__c</field>
        <operation>equals</operation>
        <value>Prosci Australia</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2024</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Not available,Cancelled</value>
    </filters>
    <label>ANZ Allocations 2023</label>
</ListView>