force-app/main/default/objects/Training_Event__c/listViews/ANZ_Onsite_Programs.listView-meta.xml
<ListView>
    <fullName>ANZ_Onsite_Programs</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 and 5</booleanFilter>
    <columns>Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Projected_Attendance__c</columns>
    <columns>Participant_Spots_Left_ANZ__c</columns>
    <columns>No_of_Trainees__c</columns>
    <columns>No_of_Pending__c</columns>
    <columns>Project_Count__c</columns>
    <columns>Project_spots_left_ANZ__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Instructor_Type__c</field>
        <operation>equals</operation>
        <value>Prosci Australia</value>
    </filters>
    <filters>
        <field>Type_of_Event__c</field>
        <operation>equals</operation>
        <value>Onsite</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Training_Event__c.Prosci_Training_Event</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>ANZ Onsite Programs</label>
</ListView>