force-app/main/default/objects/Training_Event__c/listViews/ANZ_Public_Programs_Rafe.listView-meta.xml
<ListView>
    <fullName>ANZ_Public_Programs_Rafe</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Start_Date__c</columns>
    <columns>Online_status__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Location__c</columns>
    <columns>No_of_Trainees__c</columns>
    <columns>No_of_Pending__c</columns>
    <columns>No_of_Waitlisted__c</columns>
    <columns>Project_Count__c</columns>
    <columns>Projected_Attendance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Instructor_Type__c</field>
        <operation>equals</operation>
        <value>Prosci Australia</value>
    </filters>
    <filters>
        <field>Type_of_Event__c</field>
        <operation>equals</operation>
        <value>,Public,Conference,Public Partnership</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Training_Event__c.Prosci_Training_Event</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>ANZ Public Programs Rafe</label>
</ListView>