force-app/main/default/objects/Training_Event__c/listViews/Audits.listView-meta.xml
<ListView>
    <fullName>Audits</fullName>
    <columns>NAME</columns>
    <columns>Prosci_Auditor__c</columns>
    <columns>Instructor__c</columns>
    <columns>Location__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>audit</value>
    </filters>
    <label>Audits</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>